compiler/testData/diagnostics/tests/DeferredTypes.kt
trait T {
  val a = <!PROPERTY_INITIALIZER_IN_TRAIT!><!UNRESOLVED_REFERENCE!>Foo<!>.bar()<!>
}
